Added the ability to change the popup color

--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="popup.css">
   </head>
   <body>
-    <button id="changeColor"></button>
+
+    <p>Choose popup color:</p>
+    <div>
+        <input type="color" id="popupColorPicker" name="newColor1" value="#FFFFFF">
+    </div>
+
     <script src="popup.js"></script>
   </body>
 </html>
