Can now change body bg-color

--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,11 @@
         <input type="color" id="popupColorPicker" name="newColor1" value="#FFFFFF">
     </div>
 
+    <p>Choose current page color:</p>
+    <div>
+        <input type="color" id="pageColorPicker" name="newColor2" value="#FFFFFF">
+    </div>
+
     <script src="popup.js"></script>
   </body>
 </html>
